--- a/_posts/2017-07-27-managing-users.html
+++ b/_posts/2017-07-27-managing-users.html
@@ -1,9 +1,9 @@
 ---
 layout: post
 current: post
-cover:  assets/images/team.jpg
+cover:  assets/images/shinsa.jpg
 navigation: True
-title: Managing Ghost users
+title: osaka trip
 date: 2017-07-27 07:00:00
 tags: [Getting started]
 class: post-template
