--- a/_posts/2017-07-27-using-tags.html
+++ b/_posts/2017-07-27-using-tags.html
@@ -1,9 +1,9 @@
 ---
 layout: post
 current: post
-cover:  assets/images/tags.jpg
+cover:  assets/images/cats.jpg
 navigation: True
-title: Organising your content with tags
+title: 고양이 키우고 싶다..
 date: 2017-07-27 08:00:00
 tags: [Getting started]
 class: post-template
