--- a/_posts/2017-07-27-managing-users.html
+++ b/_posts/2017-07-27-managing-users.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-current: post
-cover:  assets/images/shinsa.jpg
+current: post₩
+cover:  assets/images/osaka.jpg
 navigation: True
-title: osaka trip
+title: osaka
 date: 2017-07-27 07:00:00
 tags: [Getting started]
 class: post-template
